--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
-              <a href="">
+              <a href="https://goo.gl/maps/LjswcL94Nd7nmVRq5" target="_blank">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
                   Location
@@ -1257,13 +1257,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +91 8910307859
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  manishguptacpn@gmail.com
                 </span>
               </a>
             </div>
@@ -1275,7 +1275,7 @@
               Tamasha
             </a>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
+              Tamasha, located in Naihati, serves cuisine inspired by the rugged Northwest frontier.
             </p>
             <div class="footer_social">
               <a href="">
@@ -1311,9 +1311,9 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+          <a href="https://www.instagram.com/l_m_manish/" target="_blank">Manish Gupta</a><br><br>
+          <!-- &copy; <span id="displayYear"></span> Distributed By
+          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a> -->
         </p>
       </div>
     </div>
